@@ -8,9 +8,10 @@ h2(#sirius5.1.4). Changes in Sirius 5.1.4
 
 h3. User-Visible Changes
 
+* <span class="label label-success">Added</span> The preference @org.eclipse.sirius.ui.business.api.preferences.SiriusUIPreferencesKeys.PREF_DISPLAY_VSM_USER_FIXED_COLOR_IN_PALETTE@ has been added and can be managed in Preferences/Sirius/Sirius Diagram/Appearance/Display viewpoint colors. It allows to display, in the color palette, the user fixed color(defined in the activated viewpoints) in addition to standard colors. The color palette is available in Appearance tab of the Properties view.
 * <span class="label label-info">Modified</span> The tool "Link Note", introduced in Sirius 5.1.2, has been renamed into "Representation Link".
 * <span class="label label-info">Modified</span> A "Representation Link" is no longer deleted automatically when the targeted representation is deleted. Instead, the note header changes to "Broken Representation Link" and the note icon changes to a small red diagonal cross. You can refer to the "user documentation":user/diagrams/Diagrams.html#notes for more details.
-* <span class="label label-success">Added</span> The preference @org.eclipse.sirius.ui.business.api.preferences.SiriusUIPreferencesKeys.PREF_DISPLAY_VSM_USER_FIXED_COLOR_IN_PALETTE@ has been added and can be managed in Preferences/Sirius/Sirius Diagram/Appearance/Display viewpoint colors. It allows to display, in the color palette, the user fixed color(defined in the activated viewpoints) in addition to standard colors. The color palette is available in Appearance tab of the Properties view.
+* <span class="label label-info">Modified</span> Invalid representations, that is either representations which semantic target does not exist anymore or representations that can not be retrieved anymore, are grayed in the Model Explorer and the only available action is _delete_. It was previously the case only for representations which semantic target does not exist anymore.
 
 h3. Developer-Visible Changes
 
@@ -21,6 +22,10 @@ h4. Migrations
 * <span class="label label-success">Added</span> A migration participant has been added to update existing representation links. (see "bugzilla #533175":https://bugs.eclipse.org/bugs/show_bug.cgi?id=535648 for more details). The corresponding version, stored in attribute version of viewpoint:DAnalysis of the aird file, is _12.1.4.201810100944_.
 * <span class="label label-success">Added</span> A migration participant has been added to fix diagrams with corrupted Note, Text or Note Attachment (see "bugzilla #539554":https://bugs.eclipse.org/bugs/show_bug.cgi?id=539554 for more details). The corresponding version, stored in attribute version of viewpoint:DAnalysis of the aird file, is _12.1.4.201811151800_.
 
+
+h4. Changes in  @org.eclipse.sirius@
+
+* <span class="label label-success">Added</span> The methods @org.eclipse.sirius.business.api.query.DRepresentationDescriptorQuery.isRepresentationReachable()@ and @org.eclipse.sirius.business.api.query.DRepresentationDescriptorQuery.isRepresentationValid()@ have been added. The former allows to know if the @DRepresentation@ can be retrieved from the @DRepresentationDescriptor.repPath@: the repPath is correctly set and the representation effectively exists. The latter returns true if the @DRepresentationDescriptor@ is either dangling (@DRepresentationDescriptor.repPath@ can not be found) or can not by retrieved.
 
 h4. Changes in  @org.eclipse.sirius.diagram@
 
